Fixed some height wrapping issues on the main page

--- a/src/Qiiss/GeneralBundle/Resources/public/scss/splash.scss
+++ b/src/Qiiss/GeneralBundle/Resources/public/scss/splash.scss
@@ -238,11 +238,11 @@ body {
 
               .signup_form {
                 margin:0px;
-                padding-bottom:5px;
 
                 div {
                   position:relative;
                   display:inline-block;
+                  white-space: nowrap;
 
                   .error_message {
                     width:0px;
